crates/math-core/tests/snapshots/wiki_test__wiki193.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\color{Blue}x^2\\color{Black}+\\color{Orange} 2x\\color{Black}-\\color{LimeGreen}1"
---
<math>
    <mrow style="color:#102694;">
        <msup>
            <mi>x</mi>
            <mn>2</mn>
        </msup>
        <mrow style="color:#2C2E35;">
            <mo>+</mo>
            <mrow style="color:#FF7C37;">
                <mn>2</mn>
                <mi>x</mi>
                <mrow style="color:#2C2E35;">
                    <mo>−</mo>
                    <mrow style="color:#88C946;">
                        <mn>1</mn>
                    </mrow>
                </mrow>
            </mrow>
        </mrow>
    </mrow>
</math>
