crates/math-core/tests/snapshots/wiki_test__wiki198.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\left| \\uparrow \\right\\rangle"
---
<math>
    <mrow>
        <mo>|</mo>
        <mo stretchy="false">↑</mo>
        <mo>⟩</mo>
    </mrow>
</math>
