crates/math-core/tests/snapshots/wiki_test__wiki199.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\boldsymbol{\\alpha \\beta \\gamma \\delta \\epsilon \\zeta \\eta \\theta}"
---
<math>
    <mrow><mspace/><mi>𝜶𝜷𝜸𝜹𝝐𝜻𝜼𝜽</mi></mrow>
</math>
