crates/math-core/tests/snapshots/wiki_test__wiki205.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\text{\\textsf{textual description}}"
---
<math>
    <mtext><span class="math-core-sans-serif-font">textual description</span></mtext>
</math>
