crates/math-core/tests/snapshots/wiki_test__wiki206.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\mathit{\\Iota \\Kappa \\Lambda \\Mu \\Nu \\Xi \\Omicron \\Pi}"
---
<math>
    <mrow><mspace/><mi>𝛪𝛫𝛬𝛭𝛮𝛯𝛰𝛱</mi></mrow>
</math>
